--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,58 @@
-theme: jekyll-theme-midnight
-title: BHD Escape room site
-email: bhg-donostia@bcbl.eu
+# SITE CONFIGURATION
+title: Escape Room Brainhack Donostia # your site title
+author: Happy people # You :P
+description: > # Meta description of Homepage
+  Website of the Brainhack Donostia organization.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://Escape-room-BHD.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# THEME SETTINGS
+navigation: # Navigation links
+  # - {name: 'Home', link: '/'}
+  - { name: "Register", link: "/registration" }
+  - { name: "Schedule", link: "/schedule" }
+  - { name: "Projects", link: "/projects" }
+  - { name: "Social Events", link: "/social-events" }
+  - { name: "Previous Editions", link: "/previous-editions" }
+  - { name: "About", link: "/about" }
+  - { name: "Contact", link: "/contact" }
+
+
+hero_img: posts/bhd2021_banner_dates.svg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
+
+email: info.bhg-donostia@bcbl.eu # email for form submission
+
+twitter_username: BHDonostia # replace with your_twitter_username or comment to remove link from footer
+github_username: Brainhack-Donostia/brainhack-donostia-2020 # replace with your_github_username or comment to remove link from footer
+mattermost_channel: bhg20-donostia # replace with your_instagram_username or comment to remove link from footer
+
+# google_tag_manager: GTM-NT2CFFQ # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+
+# service_worker: true
+
+# BUILD SETTINGS
+markdown: kramdown
+highlighter: rouge # or pygments or null
+# theme: jekyll-sleek # Uncomment if you're using the theme as a ruby gem
+exclude:
+  - README.md
+  - node_modules
+  - script
+  - package.json
+  - package-lock.json
+  - Gemfile
+  - Gemfile.lock
+  - vendor
+  - npm-debug.log
+  - gulpfile.js
+  - sleek.jpg
+
+include: ["_pages"]
+permalink: /:title/
+
+compress_html:
+  clippings: all
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
