update config and test fonts

--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,32 @@
 # SITE CONFIGURATION
-title: Brainhack Donostia # your site title
-author: Brainhack Donostia # You :P
+title: Escape Room BHD21 # your site title
+author: Keep People Happy Team # You :P
 description: > # Meta description of Homepage
-  Website of the Brainhack Donostia organization.
+  Website for the social activity "Escape Room".
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://brainhack-donostia.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://Escape-Room-BHD.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # THEME SETTINGS
 navigation: # Navigation links
   # - {name: 'Home', link: '/'}
-  - { name: "Register", link: "/registration" }
-  - { name: "Schedule", link: "/schedule" }
-  - { name: "Projects", link: "/projects" }
-  - { name: "Social Events", link: "/social-events" }
-  - { name: "Previous Editions", link: "/previous-editions" }
-  - { name: "About", link: "/about" }
-  - { name: "Contact", link: "/contact" }
+  #- { name: "Register", link: "/registration" }
+  #- { name: "Schedule", link: "/schedule" }
+  #- { name: "Projects", link: "/projects" }
+  #- { name: "Social Events", link: "/social-events" }
+  #- { name: "Previous Editions", link: "/previous-editions" }
+  #- { name: "About", link: "/about" }
+  #- { name: "Contact", link: "/contact" }
 
 # tagline: >
 #   Online edition: November 9th - 13th
 
-hero_img: posts/bhd2021_banner_dates.svg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
+#hero_img: posts/bhd2021_banner_dates.svg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: info.bhg-donostia@bcbl.eu # email for form submission
+#email: info.bhg-donostia@bcbl.eu # email for form submission
 
-twitter_username: BHDonostia # replace with your_twitter_username or comment to remove link from footer
-github_username: Brainhack-Donostia/brainhack-donostia-2020 # replace with your_github_username or comment to remove link from footer
-mattermost_channel: bhg20-donostia # replace with your_instagram_username or comment to remove link from footer
+#twitter_username: BHDonostia # replace with your_twitter_username or comment to remove link from footer
+#github_username: Brainhack-Donostia/brainhack-donostia-2020 # replace with your_github_username or comment to remove link from footer
+#mattermost_channel: bhg20-donostia # replace with your_instagram_username or comment to remove link from footer
 
 # google_tag_manager: GTM-NT2CFFQ # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
@@ -52,9 +52,9 @@ exclude:
 include: ["_pages"]
 permalink: /:title/
 
-compress_html:
-  clippings: all
+#compress_html:
+ # clippings: all
 
-plugins:
-  - jekyll-sitemap
-  - jekyll-seo-tag
+#plugins:
+  #- jekyll-sitemap
+  #- jekyll-seo-tag
